@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: December 30, 2007</p>
+      <p>Last Updated: January 1, 2008</p>
     </td>
   </tr>
 </table>
@@ -725,6 +725,7 @@ Other memory:
 
 	* Changes for use with SDCC compiler
 	* Added a simulated z80 target
+	* Fix deadlock errors when using stdio but with no buffering
 </pre></ul>
 
 <table width ="100%">
