@@ -1,7 +1,7 @@
-/************************************************************
+/****************************************************************************
  * common/up_assert.c
  *
- *   Copyright (C) 2007 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -14,7 +14,7 @@
  *    notice, this list of conditions and the following disclaimer in
  *    the documentation and/or other materials provided with the
  *    distribution.
- * 3. Neither the name Gregory Nutt nor the names of its contributors may be
+ * 3. Neither the name NuttX nor the names of its contributors may be
  *    used to endorse or promote products derived from this software
  *    without specific prior written permission.
  *
@@ -31,11 +31,11 @@
  * ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
  * POSSIBILITY OF SUCH DAMAGE.
  *
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Included Files
- ************************************************************/
+ ****************************************************************************/
 
 #include <nuttx/config.h>
 
@@ -51,9 +51,9 @@
 #include "os_internal.h"
 #include "up_internal.h"
 
-/************************************************************
+/****************************************************************************
  * Definitions
- ************************************************************/
+ ****************************************************************************/
 
 /* Output debug info if stack dump is selected -- even if 
  * debug is not selected.
@@ -64,17 +64,17 @@
 # define lldbg lib_lowprintf
 #endif
 
-/************************************************************
+/****************************************************************************
  * Private Data
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Private Functions
- ************************************************************/
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Name: up_getsp
- ************************************************************/
+ ****************************************************************************/
 
 /* I don't know if the builtin to get SP is enabled */
 
@@ -89,9 +89,9 @@ static inline uint32 up_getsp(void)
   return sp;
 }
 
-/************************************************************
+/****************************************************************************
  * Name: up_stackdump
- ************************************************************/
+ ****************************************************************************/
 
 #ifdef CONFIG_ARCH_STACKDUMP
 static void up_stackdump(void)
@@ -152,9 +152,9 @@ static void up_stackdump(void)
 # define up_stackdump()
 #endif
 
-/************************************************************
+/****************************************************************************
  * Name: _up_assert
- ************************************************************/
+ ****************************************************************************/
 
 static void _up_assert(int errorcode) /* __attribute__ ((noreturn)) */
 {
@@ -179,13 +179,13 @@ static void _up_assert(int errorcode) /* __attribute__ ((noreturn)) */
     }
 }
 
-/************************************************************
- * Public Funtions
- ************************************************************/
+/****************************************************************************
+ * Public Functions
+ ****************************************************************************/
 
-/************************************************************
+/****************************************************************************
  * Name: up_assert
- ************************************************************/
+ ****************************************************************************/
 
 void up_assert(const ubyte *filename, int lineno)
 {
@@ -205,9 +205,9 @@ void up_assert(const ubyte *filename, int lineno)
   _up_assert(EXIT_FAILURE);
 }
 
-/************************************************************
+/****************************************************************************
  * Name: up_assert_code
- ************************************************************/
+ ****************************************************************************/
 
 void up_assert_code(const ubyte *filename, int lineno, int errorcode)
 {
