@@ -130,7 +130,7 @@ CONFIG_DISABLE_POSIX_TIMERS=y
 CONFIG_DISABLE_PTHREAD=y
 CONFIG_DISABLE_SIGNALS=n
 CONFIG_DISABLE_MQUEUE=y
-CONFIG_DISABLE_MOUNTPOINT=n
+CONFIG_DISABLE_MOUNTPOINT=y
 CONFIG_DISABLE_ENVIRON=y
 
 #
