@@ -287,4 +287,6 @@
 
 	* Changes for use with SDCC compiler
 	* Added a simulated z80 target
+	* Fix deadlock errors when using stdio but with no buffering
+
 
